ci: Prepare release

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,7 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0.9.15
         with:
           useConfigFile: true
+          additionalArguments: /updateprojectfiles
       - name: Install dependencies
         run: dotnet restore
       - name: Build
