--- a/src/Sonos.Base/Sonos.Base.csproj
+++ b/src/Sonos.Base/Sonos.Base.csproj
@@ -26,4 +26,9 @@
     <None Include="..\..\README.md" Pack="true" PackagePath="\README.md" />
     <None Include="..\..\LICENSE.md" Pack="true" PackagePath="\LICENSE.md" />
   </ItemGroup>
+  <ItemGroup>
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleTo">
+      <_Parameter1>Sonos.Base.Tests</_Parameter1>
+    </AssemblyAttribute>
+</ItemGroup>
 </Project>
