--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,4 +39,12 @@ jobs:
       - name: Build
         run: dotnet build --configuration Release --no-restore
       - name: Test
-        run: dotnet test --no-restore --verbosity normal
+        run: dotnet test --configuration Release --no-restore --collect:"XPlat Code Coverage" --no-build --verbosity minimal --logger trx
+      - name: Test Report
+        uses: dorny/test-reporter@v1.6.0
+        if: success() || failure()            # run this step even if previous step failed
+        with:
+          name: Test results           # Name of the check run which will be created
+          path: tests/**/TestResults/*.trx    # Path to test results
+          reporter: dotnet-trx                # Format of test results
+          list-tests: failed                  # Only list failed tests vs all tests
