--- a/src/Sonos.Base/Sonos.Base.csproj
+++ b/src/Sonos.Base/Sonos.Base.csproj
@@ -31,4 +31,7 @@
       <_Parameter1>Sonos.Base.Tests</_Parameter1>
     </AssemblyAttribute>
 </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
+  </ItemGroup>
 </Project>
