--- a/src/Sonos.Cli/appsettings.json
+++ b/src/Sonos.Cli/appsettings.json
@@ -3,7 +3,11 @@
     "LogLevel": {
       "Default": "Error",
       "System.Net.Http": "Error",
-      "Sonos": "Debug"
+      "Microsoft.Extensions.Http.DefaultHttpClientFactory": "Error",
+      "Microsoft.Hosting.Lifetime": "Error",
+      "Microsoft.AspNetCore.Hosting.Diagnostics": "Information",
+      "Sonos": "Information",
+      "Sonos.Base.Events": "Debug"
     }
   }
 }
