wip: Tests fixed

--- a/src/Sonos.Cli/Properties/launchSettings.json
+++ b/src/Sonos.Cli/Properties/launchSettings.json
@@ -2,8 +2,13 @@
   "profiles": {
     "Sonos.Cli": {
       "commandName": "Project",
-      "commandLineArgs": "192.168.200.61 events",
-      "hotReloadEnabled": false
+      "commandLineArgs": "192.168.200.61 events AVTransport",
+      "hotReloadEnabled": false,
+      "environmentVariables": {
+        "DOTNET_ENVIRONMENT": "Development",
+        "SONOSEVENTS__HOST": "192.168.200.127"
+          
+      }
     }
   }
 }
