--- a/src/Sonos.Base/Sonos.Base.csproj
+++ b/src/Sonos.Base/Sonos.Base.csproj
@@ -42,4 +42,10 @@
   <ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' ">
 	<PackageReference Include="System.Text.Json" Version="7.0.2" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="System.ServiceModel.Duplex" Version="4.4.*" />
+    <PackageReference Include="System.ServiceModel.Http" Version="4.4.*" />
+    <PackageReference Include="System.ServiceModel.NetTcp" Version="4.4.*" />
+    <PackageReference Include="System.ServiceModel.Security" Version="4.4.*" />
+  </ItemGroup>
 </Project>
